# yukkuri_tts_bot_discord

./: .env.template  .gitignore  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
src/: __main__.py  abstracts.py  aques_talk.py  commons.py  constants.py  pycord.py  pycord_client.py  sqlite_client.py
src/discord_client/: constants.py  pycord.py
